[project]
name = "custom-node-config"
description = "This project is a custom node plugin for ComfyUI that provides a form node for configuring and saving parameters related to LLMs (such as OpenAI, Kimi, DeepSeek). Users can input information such as API Key, Base, Version, and Model through the node. The node will automatically save the configuration to a local file and set it as environment variables, making it convenient for subsequent use."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/pictorialink/ComfyUI-Custom-Node-Config"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Custom-Node-Config"
Icon = ""
includes = []
